# costly-oss

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: _setup-node.yml  _setup-python.yml  ci.yml  e2e-deployed.yml  release.yml  security.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  requirements.txt
backend/app/: config.py  database.py  deps.py  main.py
backend/app/knowledge/: anthropic.md  aws.md  databricks.md  dbt_cloud.md  gemini.md  openai.md  snowflake.md
backend/app/models/: chat.py  platform.py  team.py
backend/app/routers/: ai_costs.py  anomalies.py  auth.py  chat.py  connections.py  costs.py  dashboard.py  history.py  optimization.py  platform_views.py  platforms.py  public_demo.py  queries.py  recommendations.py  settings.py  storage.py  teams.py  warehouses.py  workloads.py
backend/app/services/: agent.py  budget_checker.py  chat_sessions.py  cost_digest.py  demo.py  demo_platforms.py  encryption.py  expert_agents.py  slack.py  snowflake.py  snowflake_actions.py  unified_costs.py
backend/app/services/connectors/: anthropic_connector.py  aws_connector.py  bigquery_connector.py  claude_code_connector.py  databricks_connector.py  errors.py  gemini_connector.py  openai_connector.py  redshift_connector.py  retry.py  snowflake_connector.py
backend/tests/: conftest.py  test_anthropic_connector.py  test_api.py  test_aws_connector.py  test_bigquery_connector.py  test_claude_code_connector.py  test_connector_errors.py  test_connector_retry.py  test_connectors.py  test_databricks_connector.py  test_demo_ai_costs.py  test_demo_anomalies.py  test_demo_chat.py  test_demo_platforms.py  test_demo_recommendations.py  test_gemini_connector.py  test_openai_connector.py  test_redshift_connector.py  test_snowflake_connector.py
backend/tests/contract/: __init__.py  conftest.py  dump_openapi.py  test_airbyte.py  test_anthropic.py  test_cost_math_properties.py  test_dbt_cloud.py  test_fivetran.py  test_gemini.py  test_github.py  test_gitlab.py  test_looker.py  test_monte_carlo.py  test_omni.py  test_openapi_spec.py  test_redshift.py  test_snowflake.py  test_tableau.py
backend/tests/fixtures/: __init__.py  bigquery_fixtures.py  databricks_usage.py  openai_costs.json  openai_usage_audio_speeches.json  openai_usage_audio_transcriptions.json  openai_usage_code_interpreter.json  openai_usage_completions.json  openai_usage_embeddings.json  openai_usage_images.json  openai_usage_moderations.json  openai_usage_paginated_page1.json  openai_usage_paginated_page2.json  openai_usage_vector_stores.json
backend/tests/fixtures/airbyte/: connections.json  jobs.json
backend/tests/fixtures/anthropic/: auth_error.json  cost_report.json  usage_report_messages.json
backend/tests/fixtures/dbt_cloud/: auth_error.json  runs.json
backend/tests/fixtures/fivetran/: connectors.json  groups.json  usage.json
backend/tests/fixtures/github/: user.json  (+1 more)
docs/: agent-chat-ux.md  architecture.md  aws-iam-setup.md  chart-patterns.md  connector-ground-truth.md  connector-roadmap-2026.md  dashboard-visualization-spec.md  deployment.md  user-acquisition-strategy.md
docs/connectors/: airbyte.md  anthropic.md  aws.md  bigquery.md  claude-code.md  databricks.md  dbt-cloud.md  fivetran.md  gemini.md  github-actions.md  gitlab-ci.md  looker.md  monte-carlo.md  omni.md  openai.md  redshift.md  snowflake.md  tableau.md
docs/lanes/: README.md  anthropic.md  aws.md  backend.md  claude-code.md  demo.md  docs.md  redshift.md  snowflake.md  tests-ci.md  tests-connector-contract.md  tests-e2e.md  tests-frontend-unit.md  ui.md
docs/testing/: contract-tests.md
frontend-next/: Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend-next/e2e/: README.md  demo-dashboard.spec.ts  landing.spec.ts
frontend-next/e2e/fixtures/: index.ts  test.ts  types.ts
frontend-next/e2e/poms/: ai-costs-page.ts  anomalies-page.ts  index.ts  landing-page.ts  overview-page.ts  platforms-page.ts  setup-page.ts
frontend-next/e2e/specs/: 00-api-smoke.spec.ts  01-marketing-landing.spec.ts  02-setup-catalog.spec.ts  03-demo-overview.spec.ts  04-ai-costs-demo.spec.ts  05-anomalies-mute.spec.ts  06-platforms-claude-code-deeplink.spec.ts  07-register-then-login.spec.ts  08-not-found-graceful.spec.ts  09-accessibility.spec.ts
frontend-next/src/app/: layout.tsx  page.tsx
frontend-next/src/components/: date-range-picker.test.tsx  demo-banner.test.tsx  sidebar.tsx  stat-card.test.tsx
frontend-next/src/lib/: anomalies.test.ts  anomalies.ts  format.test.ts  platform-demo-data.ts  platform-registry.ts
frontend-next/test/: README.md  charts.snapshot.test.tsx
frontend-next/test/mocks/: handlers.ts  server.ts
nginx/: nginx.conf
(+42 files in other folders)
